--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -19,20 +19,17 @@ body {
 .note-title {
   color: #000;
   width: 100%;
-  outline: none;
-  border: none;
 }
 
 .note-textarea {
   resize: none;
   height: calc(100% - 63px);
   padding-top: 15px;
+  min-height: 200px;
 }
 
 .note-title {
   height: 50px;
-  margin-top: 13px;
-  font-size: 3rem;
 }
 
 .note-title:read-only,
@@ -48,7 +45,7 @@ body {
 }
 
 .list-container {
-  padding-left: 0;
+  padding: 0;
 }
 
 .list-container .list-group,
